# lob

./: .gitignore  Cargo.toml  README.md  build.rs
protos/: orderbook.proto
src/: lib.rs  main.rs
src/aggregated_order_book/: aggregator.rs  mod.rs  quote_merge.rs
src/aggregation/: aggregator.rs  mod.rs  quote_merge.rs
src/common/: mod.rs  model.rs
src/connectors/: binance.rs  bitstamp.rs  mod.rs
src/orderbook/: mod.rs
