[package]
name = "LOB"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.64"
serde = { version = "^1.0.125", features = ["derive"] }
serde_with = { version = "^1.9.1", features = ["chrono"] }
tokio = { version = "^1.5.0", features = ["full"] }
tokio-tungstenite = { version = "^0.14.0", features = ["native-tls"]}
flate2 = "1.0"
futures = { version = "0.3" }
itertools = "0.10.5"
